--- a/boards/shields/roBa/roBa_L.conf
+++ b/boards/shields/roBa/roBa_L.conf
@@ -7,3 +7,5 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 CONFIG_ZMK_POINTING=y
+
+CONFIG_ZMK_SLEEP=y
